--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "Nestor Edrev",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-validator": "^6.6.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.5",
     "nodemon": "^2.0.4"
   }
